@@ -8,7 +8,7 @@
 // +--------------------------------------------------------------------------+
 // | $Id::                                                                   $|
 // +--------------------------------------------------------------------------+
-// | Copyright (C) 2008 by the following authors:                             |
+// | Copyright (C) 2008-2010 by the following authors:                        |
 // |                                                                          |
 // | Mark R. Evans          mark AT glfusion DOT org                          |
 // |                                                                          |
@@ -535,7 +535,7 @@ CREATE TABLE {$_TABLES['users']} (
   remoteusername varchar(60) NULL,
   remoteservice varchar(60) NULL,
   fullname varchar(80) default NULL,
-  passwd varchar(32) NOT NULL default '',
+  passwd varchar(40) NOT NULL default '',
   email varchar(96) default NULL,
   homepage varchar(96) default NULL,
   sig varchar(160) NOT NULL default '',
